# zkp-falcon

./: .gitignore  Cargo.toml  README.md
falcon-r1cs/: Cargo.toml  README.md
falcon-r1cs/examples/: proof.rs
falcon-r1cs/src/: lib.rs  main.rs
falcon-r1cs/src/circuits/: falcon_circuit.rs  mod.rs
falcon-r1cs/src/gadgets/: arithmetics.rs  misc.rs  mod.rs  poly.rs  poseidon.rs  range_proofs.rs
falcon-rust/: Cargo.toml  build.rs
falcon-rust/src/: lib.rs  param.rs  shake.rs
falcon-rust/src/arith/: mod.rs  ntt_poly.rs  param.rs  poly.rs
falcon-rust/src/binder/: bindings.rs  mod.rs
falcon-rust/src/structs/: kp.rs  mod.rs  pk.rs  sig.rs  sk.rs
